--- a/education/PhD.html
+++ b/education/PhD.html
@@ -105,43 +105,130 @@
                 We need energy storage! 
             </h3>
             <hr>
+
             <p>
-                <b>Project Title</b>: Waste Prediction and Life Cycle Assessment of Wind Turbine Blades in Canada   
-            </p>
-            <p>
-                During the 2nd year of my M.Sc. degree, I was fortunate to be funded by <a href="https://www.mitacs.ca/en">Mitacs Canada</a> to participate in a research exchange program with the <a href="https://www.nottingham.ac.uk/">University of Nottingham</a> in the UK. 
+                Based on the challenges above, what if we can <b>'move'</b> the renewable energy around the globe? We cannot move the wind and solar power of course, but we can convert them into electrcity and 'move' the electricity. That is great, but still not practical as we may need to build very long electrical tranmissions lines connecting the regions with high renewable energy sources to the location with low renewable energy sources. That doesn't sound practical and it definitely involve a high cost. 
             </p>
 
             <p>
-                The research predicted the cumulative wind turbine blade waste until 2050 in Canada due to the rapid development of wind power and assessed their waste management strategies. While the wind power is a clean energy technology, it introduces waste especially during the decommissioning and waste management process. A long-term forecast on the waste due to the wind power sector is needed for each provincial government to plan for their renewable energy policies and waste management programs.  
+                What about if we <b>store</b> renewable energy instead? Electrical energy cannot be stored (once you produce it, you must use it). But we can convert these renewable energy into chemical energy instead! And this chemical energy can be moved around too! Most simple example - batteries. It is chemical energy and you can use it on demand. But why batteries cannot still solve the energy crisis problem? It is because batteries have a very low energy density - you will need a very heavy and large battery if you would like to do more energy-demanded work like heating, which is not practical too.  
+            </p>
+
+            <p>
+                Another solutions is hydrogen! 
+            </p>
+
+            <p>
+                My Ph.D. research proposes a relatively new solution - metal fuels. Just like it is possible to use renewable energy (e.g. solar, wind) to reduce water (H2O) into hydrogen (H2) and oxygen, and use hydrogen as a fuel, we can also reduce metal oxides (e.g. Al2O3, Fe2O3) into metal (Al, Fe) and oxygen and use metal as a fuel! In other words, we are storing the energy from solar and wind in the metal in the form of chemical energy. And metals can be moved around easily - means we can move this stored renewable energy around without needing the long transmission lines! So we call metals as energy carrier!   
+            </p>
+
+            <p>
+                Think about metal fuels like a 'better version of battery' where you can move around it with a much larger energy density. Below is an illustration if aluminum and iron metals are used as an energy carrier, how small the size can be compared to battery and hydrogen, for the same energy output.    
             </p>
 
             <h3>
-                My life at the U of S 
+                Metal Fuels 
             </h3>
             <hr>
             <p>
-                Personally, I think Saskatoon offers a perfect study environment. Being relatively less populated compared to other major cities in Canada, the city offers some benefits, from shorter transit time between home and the campus to having more sense of community. Of course, the views in the prairie during the summer are also stunning, if you are someone who sometimes values a quiet space &#128521;
+                What makes metal interesting is also it is a carbon-free fuels. If we burn metal (e.g. Al), we get metal oxides (e.g. Al2O3) without greenhouse gas emissions. Since the products of combustion is metal oxides in solid state, the combustion products can be captured and reycled. Then, these metal oxides can be reduced back to pure metal to be used over and over again in a closed sustainable loop as shown below. 
             </p>
+
             <p>
-                Living in the prairie has helped me learn more about the First Nations, which is part of the <a href="https://teaching.usask.ca/indigenoussk/import/indigenous_peoplesof_saskatchewan.php">indigenous people</a> in Canada. Besides visiting their forest on their Treaty Day, I also had the opportunity to introduce Engineering studies to some First Nations high school students. This city is small but vibrant with many young students, including international students coming from about 130 countries.  
+                Most of the research on metal fuels have been focusing on aluminum and iron fuels. I take the challenge to investigate a new metal fuel - silicon combustion. What makes silicon interesting is that it is the second most abundant element in the world (after oxygen). It is a promising energy carrier but the combustion physics and chemistry are not well known. During my Ph.D. program, I created a research program that successfully stabilize silicon flames, which allow us to investigate its combustion behaviours (some publications are coming - stay tune :) 
             </p>
-            <div class="container">
+
+            <h3>
+                Common Myths about Metal Fuels
+            </h3>
+            <p>
+                Metal fuels are a fascinating innovation, but as a relatively new concept, misconceptions about their role as energy carriers are common. Based on my experiences at various international conferences and interactions with people outside the field, here are some frequently asked questions about metal fuels.
+            </p>
+
+            <div class="container" style="text-align: left;">
                 <div class="row">
-                    <div class="col-md-4">
-                        <img src="../education/image/first_nation.jpg" width="100%">
-                        <label>Introduce engineering to the First Nations</label>
-                    </div>
-                    <div class="col-md-4">
-                        <img src="../education/image/husky.jpg" width="100%">
-                        <label>With husky during the U of S Day</label>
-                    </div>
-                    <div class="col-md-4">
-                        <img src="../education/image/award_night.jpg" width="100%">
-                        <label>Engineering Award Night</label>
+                <div class="col-md">
+                    <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                        How can metals burn easily and serve as a fuel? We use metal components everywhere — in cellphones, hardware, and other devices — yet those things do not seem to burn rapidly (if we ignite them).  
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample3">
+                        <div class="card card-body">
+                            Since metal fuels exist in a solid state, the reaction rate depends on the size of the metal particles. For metals to burn effectively and generate a reasonable amount of power, the particles should be micron-sized.
+                        </div>
                     </div>
                 </div>
+                </div>      
             </div>
+                
+            <div class="container" style="text-align: left;">
+                <div class="row">
+                <div class="col-md">
+                    <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                        Metals like aluminum and silicon are very energy-intensive to produce. If we consider the entire life cycle of metal fuels, doesn’t this make them an unsustainable option?
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample3">
+                        <div class="card card-body">
+                            Yes, some metals require a significant amount of energy to produce. However, metal fuels are used for energy storage. The more renewable energy (solar, wind) used in their production, the more renewable energy is stored within the metal. This means that when the metal is later used for combustion, you recover the same high amount of energy that was initially stored. That’s what makes metal fuels so interesting! 
+                        </div>
+                    </div>
+                </div>
+                </div>      
+            </div>
+
+            <div class="container" style="text-align: left;">
+                <div class="row">
+                <div class="col-md">
+                    <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                        To produce metals from reduction, we need electrolysis (which requires electricity) or hydrogen as a reducing agent. Why not just use electricity or hydrogen directly for energy applications instead of using them for metal production?
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample3">
+                        <div class="card card-body">
+                            The purpose of metal fuels is to store energy and transport it as an energy carrier. We can think about why do we need a power bank — we first charge it with electricity and then use it to power our devices on demand. Why not use electricity (which charges the power bank) directly? Because we need energy storage!
+                            <br><br>
+                            Electricity cannot be stored directly. Hydrogen stores energy chemically, but requires large storage space and poses safety risks such as leakage. Metal fuels can be seen as a 'power bank' - they store energy efficiently and can be easily transported and used as needed.
+                        </div>
+                    </div>
+                </div>
+                </div>      
+            </div>
+
+            <div class="container" style="text-align: left;">
+                <div class="row">
+                <div class="col-md">
+                    <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                        Does this concept require a large amount of metal? Is it sustainable?  
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample3">
+                        <div class="card card-body">
+                        The combustion products of metal fuels are solid metal oxides, which can be captured and recycled back into metal fuels through reduction. This closed-loop cycle makes metal fuels a sustainable option.
+                        <br><br>
+                        For silicon fuel, which I am currently researching, sustainability may not be a concern for long term as it is abundant and can be extracted from sand.
+                        </div>
+                    </div>
+                </div>
+                </div>      
+            </div>
+
             <p class="enter"></p>
 
         </main>
