--- a/education/PhD.html
+++ b/education/PhD.html
@@ -92,7 +92,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img src="../education/image/GlobalSolar.png" width="100%">
-                        <label>Map of Global Photovoltaic Power Potential (reproduced from Global Solar Altas)</label>
+                        <label>Map of Global Photovoltaic Potential (reproduced from Global Solar Altas)</label>
                     </div>
                     <div class="col-md-6">
                         <img src="../education/image/GlobalWind.png" width="100%">
