--- a/education/PhD.html
+++ b/education/PhD.html
@@ -141,6 +141,7 @@
             <h3>
                 Common Myths about Metal Fuels
             </h3>
+            <hr>
             <p>
                 Metal fuels are a fascinating innovation, but as a relatively new concept, misconceptions about their role as energy carriers are common. Based on my experiences at various international conferences and interactions with people outside the field, here are some frequently asked questions about metal fuels.
             </p>
@@ -150,7 +151,9 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
-                        How can metals burn easily and serve as a fuel? We use metal components everywhere — in cellphones, hardware, and other devices — yet those things do not seem to burn rapidly (if we ignite them).  
+                        How can metals burn easily and serve as a fuel? 
+                        <br><br>
+                        We use metal components everywhere — in cellphones, hardware, and other devices — yet those things do not seem to burn rapidly (if we ignite them).  
                     </button>
                 </div>
                 </div>
