--- a/education/PhD.html
+++ b/education/PhD.html
@@ -127,7 +127,7 @@
             </p>
 
             <h3>
-                Metal Fuels 
+                Metal fuels as energy carriers
             </h3>
             <hr>
             <p>
