--- a/education/PhD.html
+++ b/education/PhD.html
@@ -131,11 +131,14 @@
             </h3>
             <hr>
             <p>
-                What makes metal interesting is also it is a carbon-free fuels. If we burn metal (e.g. Al), we get metal oxides (e.g. Al2O3) without greenhouse gas emissions. Since the products of combustion is metal oxides in solid state, the combustion products can be captured and reycled. Then, these metal oxides can be reduced back to pure metal to be used over and over again in a closed sustainable loop as shown below. 
+                What makes metal fuels particularly interesting is that they are carbon-free. When metal (e.g. Al) is burned, it produces metal oxides (e.g., Al<sub>2</sub>O<sub>3</sub>) without emitting greenhouse gases. Since the combustion products are solid metal oxides, they can be captured and recycled. These metal oxides can then be reduced back to pure metal, allowing them to be reused repeatedly in a closed sustainable loop, as shown below.
             </p>
-
+            
             <p>
-                Most of the research on metal fuels have been focusing on aluminum and iron fuels. I take the challenge to investigate a new metal fuel - silicon combustion. What makes silicon interesting is that it is the second most abundant element in the world (after oxygen). It is a promising energy carrier but the combustion physics and chemistry are not well known. During my Ph.D. program, I created a research program that successfully stabilize silicon flames, which allow us to investigate its combustion behaviours (some publications are coming - stay tune :) 
+                Most research on metal fuels has focused on aluminum and iron. However, I have taken on the challenge of investigating a new metal fuel — silicon combustion. What makes silicon particularly exciting is that it is the second most abundant element on Earth (after oxygen). It is a promising energy carrier, but its combustion physics and chemistry remain largely unexplored.  
+            
+                During my Ph.D. program, I developed a research framework that successfully stabilized silicon flames, enabling a detailed study of their combustion behaviours. Stay tuned — some publications on this topic are coming soon! :)
+            </p>
             </p>
 
             <h3>
