--- a/education/PhD.html
+++ b/education/PhD.html
@@ -154,9 +154,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
-                        How can metals burn easily and serve as a fuel? 
-                        <br><br>
-                        We use metal components everywhere — in cellphones, hardware, and other devices — yet those things do not seem to burn rapidly (if we ignite them).  
+                        How can metals burn easily and serve as an effective fuel? 
                     </button>
                 </div>
                 </div>
@@ -176,7 +174,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
-                        Metals like aluminum and silicon are very energy-intensive to produce. If we consider the entire life cycle of metal fuels, doesn’t this make them an unsustainable option?
+                       Some metals are very energy-intensive to produce. Doesn’t this make them an unsustainable option?
                     </button>
                 </div>
                 </div>
@@ -196,7 +194,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
-                        To produce metals from reduction, we need electrolysis (which requires electricity) or hydrogen as a reducing agent. Why not just use electricity or hydrogen directly for energy applications instead of using them for metal production?
+                        To produce metals from reduction, we need electrolysis or hydrogen. Why not just use electricity or hydrogen directly for energy applications?
                     </button>
                 </div>
                 </div>
