--- a/education/PhD.html
+++ b/education/PhD.html
@@ -142,7 +142,7 @@
             </p>
 
             <h3>
-                Common Myths about Metal Fuels
+                Common myths about metal fuels
             </h3>
             <hr>
             <p>
