--- a/education/PhD.html
+++ b/education/PhD.html
@@ -126,6 +126,17 @@
                 Think of metal fuels as a "better version of a battery" — a compact, high-energy-density energy carrier. The illustration below shows how aluminum and iron metals compare to batteries and hydrogen in terms of energy density, demonstrating how much smaller they can be for the same energy output.
             </p>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <img src="../education/image/EnergyDensity.png" width="100%">
+                        My UNITEN life that includes different academic and non-academic activities
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
+
             <h3>
                 Metal fuels as energy carriers
             </h3>
@@ -138,7 +149,6 @@
                 Most research on metal fuels has focused on aluminum and iron. However, I have taken on the challenge of investigating a new metal fuel — silicon combustion. What makes silicon particularly exciting is that it is the second most abundant element on Earth (after oxygen). It is a promising energy carrier, but its combustion physics and chemistry remain largely unexplored.  
             
                 During my Ph.D. program, I developed a research framework that successfully stabilized silicon flames, enabling a detailed study of their combustion behaviours. Stay tuned — some publications on this topic are coming soon! :)
-            </p>
             </p>
 
             <h3>
