--- a/education/PhD.html
+++ b/education/PhD.html
@@ -75,7 +75,7 @@
             </p>
 
             <h3>
-                The challenges of using renewable energy sources 
+                What are the challenges of using renewable energy sources? 
             </h3>
             <hr>
             <p>
