--- a/education/PhD.html
+++ b/education/PhD.html
@@ -130,8 +130,14 @@
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
-                        <img src="../education/image/EnergyDensity.png" width="100%">
-                        My UNITEN life that includes different academic and non-academic activities
+                        <img src="../education/image/MetalFuelCycle.png" width="100%">
+                        Metal Fuel Cycle 
+                        1.	Conversion of renewable energy (e.g., solar, wind) into electrical energy for metal reduction.
+                        2.	Reduction of metal oxides, converting electrical energy into chemical energy stored in the metal.
+                        3.	Metal fuels store renewable energy and can be transported to various locations without the need for transmission lines.
+                        4.	Burning metal on demand releases the stored chemical energy as heat.
+                        5.	Metal combustion products are solid and can be captured.
+                        6.	The captured metal oxides can be transported back for reduction, allowing them to be reused in a closed sustainable loop.  
                     </div>
                     <div class="col-md-2"></div>
                 </div>
@@ -151,8 +157,19 @@
                 During my Ph.D. program, I developed a research framework that successfully stabilized silicon flames, enabling a detailed study of their combustion behaviours. Stay tuned — some publications on this topic are coming soon! :)
             </p>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <img src="../education/image/SiliconFlames.png" width="100%">
+                        Stabilized silicon flames at various concentrations with a green laser dianogstic for particle image velocimetry (PIV) to investigate the flame speed. 
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
+
             <h3>
-                Common myths about metal fuels
+                Common myths and FAQs about metal fuels
             </h3>
             <hr>
             <p>
@@ -163,8 +180,28 @@
                 <div class="row">
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
-                    data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                    data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
                         How can metals burn easily and serve as an effective fuel? 
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample2">
+                        <div class="card card-body">
+                            Since metal fuels exist in a solid state, the reaction rate depends on the size of the metal particles. For metals to burn effectively and generate a reasonable amount of power, the particles should be micron-sized.
+                        </div>
+                    </div>
+                </div>
+                </div>      
+            </div>
+
+            <div class="container" style="text-align: left;">
+                <div class="row">
+                <div class="col-md">
+                    <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                        How can metal combustion produce heat? 
                     </button>
                 </div>
                 </div>
@@ -172,7 +209,9 @@
                 <div class="col-md">
                     <div class="collapse" id="collapseExample3">
                         <div class="card card-body">
-                            Since metal fuels exist in a solid state, the reaction rate depends on the size of the metal particles. For metals to burn effectively and generate a reasonable amount of power, the particles should be micron-sized.
+                            In most cases, oxidation reactions are exothermic, meaning they release heat. Just as hydrocarbons oxidize into water and carbon dioxide, producing heat, metals can also undergo oxidation to release energy when metals oxidize into (carbon-free) metal oxides. 
+                            <br><br>
+                            Iron rusting is also an oxidation process that releases heat, but the heat released is often unnoticeable because it is a slow oxidation process. 
                         </div>
                     </div>
                 </div>
@@ -184,7 +223,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
-                       Some metals are very energy-intensive to produce. Doesn’t this make them an unsustainable option?
+                       Metal fuels are not sustainable as some metals are very energy-intensive to produce. 
                     </button>
                 </div>
                 </div>
@@ -204,7 +243,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample">
-                        To produce metals from reduction, we need electrolysis or hydrogen. Why not just use electricity or hydrogen directly for energy applications?
+                        Metal fuels are unnecessary. Instead of electricity or hydrogen to reduce metals, why not use electricity and hydrogen directly?
                     </button>
                 </div>
                 </div>
@@ -226,7 +265,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample6" aria-expanded="false" aria-controls="collapseExample">
-                        Does this concept require a large amount of metal? Is it sustainable?  
+                        Metal fuels are not sustainable as we will need a lot of metals, which are hard to source. 
                     </button>
                 </div>
                 </div>
@@ -237,6 +276,48 @@
                         The combustion products of metal fuels are solid metal oxides, which can be captured and recycled back into metal fuels through reduction. This closed-loop cycle makes metal fuels a sustainable option.
                         <br><br>
                         For silicon fuel, which I am currently researching, sustainability may not be a concern for long term as it is abundant and can be extracted from sand.
+                        </div>
+                    </div>
+                </div>
+                </div>      
+            </div>
+
+            <div class="container" style="text-align: left;">
+                <div class="row">
+                <div class="col-md">
+                    <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample7" aria-expanded="false" aria-controls="collapseExample">
+                       If metal fuels are used, do we need to redesign the engine system?
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample7">
+                        <div class="card card-body">
+                            Absolutely! We would not want metal powder (or solid combustion products) to stick to the moving parts of an internal combustion engine. However, metal fuels can be burned separately in an external combustion engine, where a cyclone system captures the combustion products. The heat generated from the external combustion engine can then be transferred to the intended applications. 
+                        </div>
+                    </div>
+                </div>
+                </div>      
+            </div>
+
+            <div class="container" style="text-align: left;">
+                <div class="row">
+                <div class="col-md">
+                    <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
+                    data-target="#collapseExample8" aria-expanded="false" aria-controls="collapseExample">
+                        Can metal fuels really solve the energy crisis?
+                    </button>
+                </div>
+                </div>
+                <div class="row">
+                <div class="col-md">
+                    <div class="collapse" id="collapseExample8">
+                        <div class="card card-body">
+                            The idea presented here is not to claim that metal fuels are the best solution compared to other alternatives such as batteries, hydrogen, biomass, or carbon sequestration technologies. Rather, the emphasis is that achieving net-zero emissions is an uneasy challenge, and it requires a diverse range of innovative solutions, rather than relying on just a few options.
+                            <br><br>
+                            Compared to existing solutions, the main challenge of metal fuels is their technology readiness, as they remain a relatively new and emerging concept. Therefore, advancing this field requires more passionate and innovative researchers to push the technology forward :)   
                         </div>
                     </div>
                 </div>
