--- a/education/PhD.html
+++ b/education/PhD.html
@@ -173,7 +173,7 @@
             </h3>
             <hr>
             <p>
-                Metal fuels are a fascinating innovation, but as a relatively new concept, misconceptions about their role as energy carriers are common. Based on my experiences at various international conferences and interactions with people outside the field, here are some frequently asked questions about metal fuels.
+                Metal fuels are a fascinating innovation, but as a relatively new concept, misconceptions about their role as energy carriers are common. Based on my experiences at various international conferences and interactions with people across various disciplines, here are some frequently asked questions about metal fuels.
             </p>
 
             <div class="container" style="text-align: left;">
