--- a/education/PhD.html
+++ b/education/PhD.html
@@ -111,7 +111,7 @@
             </p>
             
             <p>
-                What if we could <b>store</b> renewable energy instead? Electrical energy itself cannot be stored. However, we can convert renewable energy into chemical energy, which can be transported and used when needed. A simple example is a battery - it stores energy chemically and can be used on demand. But why haven't batteries solved the energy crisis? Because they have a very low energy density — to perform high-energy-demand tasks like space heating, you would need an extremely large and heavy battery, which is impractical.
+                What if we could <b>store</b> renewable energy instead? Electrical energy itself cannot be stored. However, we can convert renewable energy into chemical energy, which can be transported and used when needed. A simple example is a battery — it stores energy chemically and can be used on demand. But why haven't batteries solved the energy crisis? Because they have a very low energy density — to perform high-energy-demand tasks like space heating, you would need an extremely large and heavy battery, which is impractical.
             </p>
             
             <p>
