--- a/education/PhD.html
+++ b/education/PhD.html
@@ -142,7 +142,7 @@
             </h3>
             <hr>
             <p>
-                What makes metal fuels particularly interesting is that they are carbon-free. When metal (e.g. Al) is burned, it produces metal oxides (e.g., Al<sub>2</sub>O<sub>3</sub>) without emitting greenhouse gases. Since the combustion products are solid metal oxides, they can be captured and recycled. These metal oxides can then be reduced back to pure metal, allowing them to be reused repeatedly in a closed sustainable loop, as shown below.
+                What makes metal fuels particularly interesting is that they are carbon-free. When metal (e.g. Al) is burned, it produces metal oxides (e.g. Al<sub>2</sub>O<sub>3</sub>) without emitting greenhouse gases. Since the combustion products are solid metal oxides, they can be captured and recycled. These metal oxides can then be reduced back to pure metal, allowing them to be reused repeatedly in a closed sustainable loop, as shown below.
             </p>
             
             <p>
