--- a/education/PhD.html
+++ b/education/PhD.html
@@ -144,9 +144,9 @@
                     <div class="col-md-2"></div>
                 </div>
             </div>
-            
+
             <p>
-                Most research on metal fuels has focused on aluminum and iron. However, I have taken on the challenge of investigating a new metal fuel — silicon combustion. What makes silicon particularly exciting is that it is the second most abundant element on Earth (after oxygen). It is a promising energy carrier, but its combustion physics and chemistry remain largely unexplored.  
+                As of now, most research on metal fuels has focused on aluminum and iron. However, I have taken on the challenge of investigating a new metal fuel — silicon combustion. What makes silicon particularly exciting is that it is the second most abundant element on Earth (after oxygen). It is a promising energy carrier, but its combustion physics and chemistry remain largely unexplored.  
             
                 During my Ph.D. program, I developed a research framework that successfully stabilized silicon flames, enabling a detailed study of their combustion behaviours. Stay tuned — some publications on this topic are coming soon! :)
             </p>
