--- a/education/PhD.html
+++ b/education/PhD.html
@@ -156,7 +156,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/SiliconFlames.png" width="100%">
-                        Stabilized silicon flames at various concentrations with a green laser dianogstic for particle image velocimetry (PIV) to investigate the flame speed. 
+                        Stabilized silicon flames at various concentrations using a green laser diagnostic for particle image velocimetry (PIV) to investigate flame speed.
                     </div>
                     <div class="col-md-2"></div>
                 </div>
