--- a/education/PhD.html
+++ b/education/PhD.html
@@ -217,7 +217,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
-                       Metal fuels are not sustainable as some metals are very energy-intensive to produce. 
+                       Metals as fuels are not a sustainable concept as some metals (e.g. aluminum, silicon) are very energy-intensive to produce. 
                     </button>
                 </div>
                 </div>
