--- a/education/PhD.html
+++ b/education/PhD.html
@@ -237,7 +237,7 @@
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt2" type="button" data-toggle="collapse" 
                     data-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample">
-                        Metal fuels are unnecessary. Instead of using electricity or hydrogen to reduce metals, why not use electricity and hydrogen directly?
+                        Metal fuels are unnecessary. Instead of using electricity or hydrogen to reduce metals, why not use electricity / hydrogen directly for applications?
                     </button>
                 </div>
                 </div>
