--- a/education/PhD.html
+++ b/education/PhD.html
@@ -289,7 +289,7 @@
                 <div class="col-md">
                     <div class="collapse" id="collapseExample7">
                         <div class="card card-body">
-                            Absolutely! We would not want metal powder (or solid combustion products) to stick to the moving parts of an internal combustion engine. However, metal fuels can be burned separately in an external combustion engine, where a cyclone system captures the combustion products. The heat generated from the external combustion engine can then be transferred to the intended applications. 
+                            Absolutely! We would not want metal powder or solid combustion products to stick to the moving parts of an internal combustion engine. However, metal fuels can be burned separately in an external combustion engine, where a cyclone system captures the combustion products. The heat generated from the external combustion engine can then be transferred to the intended applications. 
                         </div>
                     </div>
                 </div>
